--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,17 +1,12 @@
 [server]
 host = 0.0.0.0
-port = 80
-debug = false
-log_dir = /data/logs/
-
-[adx-redis]
-host = -
-password = -
-port = 6379
+port = 8094
+debug = true
+log_dir = /Users/lihuang/GolandProjects/schedule/data/logs/
 
 [redis]
 host = 127.0.0.1
-password = 123456
+password = 
 port = 6379
 
 [elasticsearch]
