--- a/conf/config_pro.ini
+++ b/conf/config_pro.ini
@@ -1,8 +1,8 @@
 [server]
 host = 0.0.0.0
-port = 8071
-debug = true
-log_dir = /Users/lihuang/GolandProjects/schedule/data/logs/
+port = 80
+debug = false
+log_dir = /data/logs/
 
 [redis]
 host = r-bp1rvmedufr30066ok.redis.rds.aliyuncs.com
